# proceedrizer

./: CMakeLists.txt  README.md
src/: Matrix.h  Model.h  gl.cpp  gl.h  main.cpp  platform.h  tgaimage.cpp  tgaimage.h  win32.cpp
